--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           mkdir -p ${OUTPUT_ARTIFACTORY_PATH}
           cp -RP build/android/ALL_ARCHITECTURE/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}
 
-          ls third_party/agora/dcg/libs/Agora_Native_SDK_for_Android_FULL/rtc/sdk/high_level_api/include/
+          
 
 
           ZIP_FILE_NAME="${OUTPUT_ARTIFACTORY_NAME}.zip"
@@ -42,6 +42,11 @@ jobs:
           pushd output
             zip -r -y "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
+
+      - name: ls
+        if: always()
+        run: |
+          ls third_party/agora/dcg/libs/Agora_Native_SDK_for_Android_FULL/rtc/sdk/high_level_api/include/
 
       - name: Get current date
         id: date
