Auto upload artifact to github release (#8)
* Auto upload artifact to github release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 project(raw-data-plugin)
 
+# Make it simple to extract by script
+set(PLUGIN_VERSION "0.1.0")
+
 if (WIN32)
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG")
     set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG")
@@ -24,15 +27,6 @@ endif ()
 
 set(LIBRARY_NAME raw-data-plugin)
 set(LIBRARY_OUTPUT_NAME "AgoraRawDataPlugin")
-
-set(PLUGIN_VERSION_MAJOR 4)
-set(PLUGIN_VERSION_MINOR 1)
-set(PLUGIN_VERSION_PATCH 0)
-set(PLUGIN_VERSION_TWEAK 0)
-set(PLUGIN_VERSION "${PLUGIN_VERSION_MAJOR}.${PLUGIN_VERSION_MINOR}.${PLUGIN_VERSION_PATCH}")
-if (PLUGIN_VERSION_TWEAK)
-    string(APPEND PLUGIN_VERSION ".${PLUGIN_VERSION_TWEAK}")
-endif ()
 
 set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/output/")
 set(OUTPUT_DIR_REAL "${OUTPUT_DIR}/${CMAKE_BUILD_TYPE}")
@@ -67,7 +61,7 @@ target_include_directories(${LIBRARY_NAME} PUBLIC
 
 if (APPLE)
     set_target_properties(${LIBRARY_NAME} PROPERTIES
-            frameworks TRUE
+            FRAMEWORK TRUE
             FRAMEWORK_VERSION A
             MACOSX_FRAMEWORK_IDENTIFIER io.agora.rtc.plugin
             MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PLUGIN_VERSION}"
