--- a/frameworks/flutter/video_raw_data/example/pubspec.yaml
+++ b/frameworks/flutter/video_raw_data/example/pubspec.yaml
@@ -6,7 +6,8 @@ description: Demonstrates how to use the video_raw_data plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: '>=2.14.0 <3.0.0'
+  flutter: '>=2.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
