--- a/frameworks/flutter/video_raw_data/example/pubspec.yaml
+++ b/frameworks/flutter/video_raw_data/example/pubspec.yaml
@@ -20,12 +20,10 @@ dependencies:
     sdk: flutter
 
   video_raw_data:
-    # When depending on this package from a real application you should use:
-    #   video_raw_data: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../
+    git:
+      url: https://github.com/AgoraIO-Extensions/RawDataPluginSample.git
+      path: frameworks/flutter/video_raw_data
+      ref: 3e3c5f3f7872692b9c1e885a32108b974182507c
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
