--- a/frameworks/flutter/video_raw_data/android/build.gradle
+++ b/frameworks/flutter/video_raw_data/android/build.gradle
@@ -47,6 +47,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        main.jniLibs.srcDirs += 'libs'
     }
 
     defaultConfig {
