--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "output/*.zip"
+          files: |
+            output/*.zip
 
   cmake_build_ios:
     name: Build ios
@@ -71,7 +72,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "output/*.zip"
+          files: |
+            output/*.zip
 
   cmake_build_macos:
     name: Build macos
@@ -95,11 +97,16 @@ jobs:
             zip -r -y "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
 
+          lipo -remove arm64 build/mac/MAC/output/Release/AgoraRawDataPlugin.dylib -o ${OUTPUT_ARTIFACTORY_PATH}/VideoObserverPlugin_x64.dylib
+          lipo -remove x86_64 build/mac/MAC/output/Release/AgoraRawDataPlugin.dylib -o ${OUTPUT_ARTIFACTORY_PATH}/VideoObserverPlugin_arm64.dylib
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "output/*.zip"
+          files: |
+            output/*.zip
+            output/*.dylib
 
   cmake_build_windows:
     name: Build windows
@@ -116,8 +123,8 @@ jobs:
           OUTPUT_ARTIFACTORY_PATH=output/${OUTPUT_ARTIFACTORY_NAME}
 
           mkdir -p ${OUTPUT_ARTIFACTORY_PATH}
-          cp -RP build/windows/Win32/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}
-          cp -RP build/windows/x64/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}
+          cp -RP build/windows/Win32/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}/Win32
+          cp -RP build/windows/x64/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}/x64
 
           ZIP_FILE_NAME="${OUTPUT_ARTIFACTORY_NAME}.zip"
 
@@ -125,8 +132,13 @@ jobs:
             tar.exe -a -c -f  "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
 
+          cp build/windows/Win32/output/Release/AgoraRawDataPlugin.dll ${OUTPUT_ARTIFACTORY_PATH}/VideoObserverPlugin_ia32.dll
+          cp build/windows/x64/output/Release/AgoraRawDataPlugin.dll ${OUTPUT_ARTIFACTORY_PATH}/VideoObserverPlugin_x64.dll
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "output/*.zip"
+          files: |
+            output/*.zip
+            output/*.dll
