--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,15 @@
 name: CI
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
-    branches: 
-      - main
-      - release/**
+    tags:
+      - v*.*.**
   pull_request:
-    branches: 
+    branches:
       - main
       - release/**
 
@@ -40,24 +43,12 @@ jobs:
             zip -r -y "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
 
-      - name: Get current date
-        id: date
-        run: |
-          VERSION=$(bash scripts/grep_version.sh)
-          DATE=$(date '+%Y%m%d')
-          BUILD_NAME="${VERSION}_${DATE}"
-          echo "::set-output name=date::${BUILD_NAME}"
-      - name: Test with environment variables
-        run: echo $BUILD_NAME
-        env:
-          BUILD_NAME: artifact_${{ steps.date.outputs.date }}
-
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'push' }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: artifact_${{ steps.date.outputs.date }}
-          files: "output/*.zip"
+          files: |
+            output/*.zip
 
   cmake_build_ios:
     name: Build ios
@@ -81,24 +72,12 @@ jobs:
             zip -r -y "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
 
-      - name: Get current date
-        id: date
-        run: |
-          VERSION=$(bash scripts/grep_version.sh)
-          DATE=$(date '+%Y%m%d')
-          BUILD_NAME="${VERSION}_${DATE}"
-          echo "::set-output name=date::${BUILD_NAME}"
-      - name: Test with environment variables
-        run: echo $BUILD_NAME
-        env:
-          BUILD_NAME: artifact_${{ steps.date.outputs.date }}
-
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'push' }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: artifact_${{ steps.date.outputs.date }}
-          files: "output/*.zip"
+          files: |
+            output/*.zip
 
   cmake_build_macos:
     name: Build macos
@@ -121,24 +100,17 @@ jobs:
           pushd output
             zip -r -y "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
-      - name: Get current date
-        id: date
-        run: |
-          VERSION=$(bash scripts/grep_version.sh)
-          DATE=$(date '+%Y%m%d')
-          BUILD_NAME="${VERSION}_${DATE}"
-          echo "::set-output name=date::${BUILD_NAME}"
-      - name: Test with environment variables
-        run: echo $BUILD_NAME
-        env:
-          BUILD_NAME: artifact_${{ steps.date.outputs.date }}
+
+          lipo -remove arm64 build/mac/MAC/output/Release/AgoraRawDataPlugin.dylib -o output/VideoObserverPlugin_x64.dylib
+          lipo -remove x86_64 build/mac/MAC/output/Release/AgoraRawDataPlugin.dylib -o output/VideoObserverPlugin_arm64.dylib
 
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'push' }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: artifact_${{ steps.date.outputs.date }}
-          files: "output/*.zip"
+          files: |
+            output/*.zip
+            output/*.dylib
 
   cmake_build_windows:
     name: Build windows
@@ -149,12 +121,14 @@ jobs:
       - name: Run cmake build windows
         shell: bash
         run: |
+          scripts/build-windows.bat
+
           OUTPUT_ARTIFACTORY_NAME="VideoObserver_Plugin_for_Windows"
           OUTPUT_ARTIFACTORY_PATH=output/${OUTPUT_ARTIFACTORY_NAME}
 
           mkdir -p ${OUTPUT_ARTIFACTORY_PATH}
-
-          bash scripts/build-windows.sh $(pwd) ${OUTPUT_ARTIFACTORY_PATH}
+          cp -RP build/windows/Win32/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}/Win32
+          cp -RP build/windows/x64/output/Release/ ${OUTPUT_ARTIFACTORY_PATH}/x64
 
           ZIP_FILE_NAME="${OUTPUT_ARTIFACTORY_NAME}.zip"
 
@@ -162,22 +136,13 @@ jobs:
             tar.exe -a -c -f  "$ZIP_FILE_NAME" $OUTPUT_ARTIFACTORY_NAME
           popd
 
-      - name: Get current date
-        id: date
-        shell: bash
-        run: |
-          VERSION=$(bash scripts/grep_version.sh)
-          DATE=$(date '+%Y%m%d')
-          BUILD_NAME="${VERSION}_${DATE}"
-          echo "::set-output name=date::${BUILD_NAME}"
-      - name: Test with environment variables
-        run: echo $BUILD_NAME
-        env:
-          BUILD_NAME: artifact_${{ steps.date.outputs.date }}
+          cp build/windows/Win32/output/Release/AgoraRawDataPlugin.dll output/VideoObserverPlugin_ia32.dll
+          cp build/windows/x64/output/Release/AgoraRawDataPlugin.dll output/VideoObserverPlugin_x64.dll
 
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name == 'push' }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: artifact_${{ steps.date.outputs.date }}
-          files: "output/*.zip"
+          files: |
+            output/*.zip
+            output/*.dll
