--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -217,6 +217,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-java@v1
+        if: ${{ matrix.platform == 'apk' }}
+        with:
+          java-version: "11"
+
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: 3.0.0
